# pypkgtemplate

./: .gitlab-ci.yml  README.md  README.rst  cookiecutter.json
.github/ISSUE_TEMPLATE/: bug_report.md
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: merge_request.md
{{cookiecutter.package}}/: .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.package}}/.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.package}}/.github/ISSUE_TEMPLATE/: feature_request.md
{{cookiecutter.package}}/.gitlab/issue_templates/: bug_report.md
{{cookiecutter.package}}/changelog/: README.rst
{{cookiecutter.package}}/docs/source/: conf.py  index.rst  install.rst
{{cookiecutter.package}}/documentation/source/: conf.py  index.rst  installation.rst  upgrade.rst
{{cookiecutter.package}}/test/: test_version.py
{{cookiecutter.package}}/{{cookiecutter.package}}/: __init__.py
