[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
known_first_party = {{cookiecutter.package}}
known_third_party = pytest
line_length = 80
multi_line_output = 3
skip = .venv, .tox
include_trailing_comma = True

[metadata]
name = {{cookiecutter.package}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
maintainer = {{cookiecutter.author}}
maintainer_email = {{cookiecutter.author_email}}
url = {{cookiecutter.git_hosting_url}}
project_urls =
  Source Code = {{cookiecutter.git_hosting_url}}
  Documentation = https://{{cookiecutter.package}}.readthedocs.io/
  Maintainer Support = {{cookiecutter.liberpay_username}}
description = {{cookiecutter.package_description}}
long_description = file: README.rst
license = GPLv3
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
use_scm_version = True
python_requires = >=3.6
setup_requires =
  setuptools_scm
  setuptools_scm_git_archive
package_dir =
  = .
packages = find:
zip_safe = False

[options.packages.find]
where = .

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
warning-is-error = True

[options.extras_require]
docs =
  sphinx
  sphinx_rtd_theme
  sphinx-autodoc-typehints >= 1.6.0, < 2.0
changelog =
  towncrier <= 19.2.0, < 20.0
